# yayasensor

./: .gitignore  CMakeLists.txt  MIT-LICENCE.txt  README.md
db/: lib_20200811_v10.sql
lib/net/client/: CMakeLists.txt  mgclient.cpp  mgclient.h
lib/net/cmd/: cmdbuilder.cpp  cmdbuilder.h  mgcommand.cpp  mgcommand.h  mgcommanddecoder.cpp  mgcommanddecoder.h
lib/net/core/: mgbasicsingleton.h  mgbufferclient.h  mgclientbase.cpp  mgclientbase.h  mgremotebuffer.cpp  mgremotebuffer.h  mgutils.cpp  mgutils.h
lib/net/server/: CMakeLists.txt  mgconnhandle.cpp  mgconnhandle.h  mgserverbase.cpp  mgserverbase.h
lib/sensor/libdht22/: CMakeLists.txt
lib/sensor/libdht22/rp2/: pi_2_dht_read.h
lib/sql/: CMakeLists.txt  ctmgrdatabase.cpp  ctmgrdatabase.hpp  ctmgrdb.cpp  ctmgrdb.hpp
test/client/: client.pro
yayaclient/: CMakeLists.txt  main.cpp  sensorclient.cpp  sensorclient.h
yayaserver/: CMakeLists.txt  main.cpp  sensorcmddb.cpp  sensorcmddb.h  sensorremotecli.cpp  sensorremotecli.h  sensorserver.cpp  sensorserver.h
yayatest/: CMakeLists.txt  main.cpp
